# smart-docqa

./: .gitignore  README.md  pyproject.toml
src/app/: main.py
src/app/pages/: chat.py  evaluation.py
src/smart_docqa/: config.py
src/smart_docqa/chain/: prompts.py  qa_chain.py
src/smart_docqa/evaluation/: dataset.py  runner.py
src/smart_docqa/ingestion/: chunker.py  embedder.py  loader.py
src/smart_docqa/ingestion/demo_file/: demo.txt
src/smart_docqa/intgestion/: chunker.py  embedder.py  loader.py
src/smart_docqa/retrieval/: compressor.py  hybrid.py  hyde.py
src/smart_docqa/retriever/: compressor.py  hybrid.py  hyde.py
