[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-docqa"
version = "0.1.0"
description = "Production-quality RAG system with hybrid search, HyDE, and RAGAS evaluation dashboard"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # ── LLM & LangChain ──────────────────────────────────────────────────────
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-chroma>=0.1.4",
    "langchain-text-splitters>=0.3.0",

    # ── Vector DB ─────────────────────────────────────────────────────────────
    "chromadb>=0.5.0",

    # ── Sparse retrieval ──────────────────────────────────────────────────────
    "rank-bm25>=0.2.2",

    # ── Document loaders ──────────────────────────────────────────────────────
    "pypdf>=4.0.0",
    "docx2txt>=0.8",
    "beautifulsoup4>=4.12.0",

    # ── Evaluation ────────────────────────────────────────────────────────────
    "ragas>=0.1.21",
    "datasets>=2.20.0",

    # ── Frontend ──────────────────────────────────────────────────────────────
    "streamlit>=1.37.0",

    # ── Config & validation ───────────────────────────────────────────────────
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",

    # ── HTTP ──────────────────────────────────────────────────────────────────
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/smart_docqa"]

# ── Ruff (linter + formatter) ─────────────────────────────────────────────────
[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/smart_docqa"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true